# design-patterns

./: .gitignore  CMakeLists.txt  main.cpp
creational-patterns/builder/: car_builder.cpp  car_builder.h
creational-patterns/factoryMethod/: phone.cpp  phone.h
creational-patterns/prototype/: shape.cpp  shape.h
creational-patterns/singleton/: singleton.cpp  singleton.h
